@@ -19,6 +19,10 @@ namespace Marvel {
 		void       clear        ();
 		void       addCommand   (mvDrawCmd* command);
 		void       deleteCommand(const std::string& tag);
+		void       bringForward (const std::string& tag);
+		void       bringToFront (const std::string& tag);
+		void       sendBack     (const std::string& tag);
+		void       sendToBack   (const std::string& tag);
 		mvDrawCmd* getCommand   (const std::string& tag);
 
 	private:
